# hue-app

./: .env.skel  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  pytest.ini
app/: main.py
app/config/: test.yaml
app/interfaces/: light_server.py
app/models/: light_fade_out_request.py  set_light_gradients_request.py
app/services/: celery_service.py  christmas_service.py  config_service.py  factories.py  hue_service.py  redis_service.py
tests/unit/: test_main.py
tests/unit/services/: test_celery_service.py  test_christmas_service.py  test_config_service.py  test_factories.py  test_hue_service.py
