[project]
name = "hue-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery[redis]>=5.5.3",
    "fastapi[standard]>=0.121.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "types-pygments>=2.19.0.20250809",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
    "types-ujson>=5.10.0.20250822",
]

[dependency-groups]
dev = [
    "celery-types>=0.23.0",
    "coverage-badge>=1.1.2",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.4",
]
